Bug 1145751 - remove overflow-y to make the scrollbar hidden

--- a/shared/elements/gaia_confirm/style.css
+++ b/shared/elements/gaia_confirm/style.css
@@ -50,7 +50,6 @@ gaia-confirm[hidden] {
   -moz-box-sizing: padding-box;
   width: 100%;
   display: inline-block;
-  overflow-y: scroll;
   max-height: 100%;
   vertical-align: middle;
   white-space: normal;
